feat: added support for italic inline decoration

--- a/examples/2_text_with_decoration.html
+++ b/examples/2_text_with_decoration.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><html><head><title>Markdown</title></head><body><h1>Text with **decoration**</h1>
-<p>foo <strong>bar</strong> baz <strong>qux</strong></p>
-<p><strong>foo</strong> bar</p>
-<p>bar <strong>baz</strong></p>
+<!DOCTYPE html><html><head><title>Markdown</title></head><body><h1>Text with <strong>decoration</strong></h1><p>foo <strong>bar</strong> baz <em>qux</em></p>
+<p><strong>foo</strong> <em>bar</em> baz</p>
+<p>bar <strong>bar</strong> <em>baz</em> qux</p>
 </body></html>
