--- a/examples/2_text_with_decoration.html
+++ b/examples/2_text_with_decoration.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><title>Markdown</title></head><body><h1>Text with <strong>decoration</strong></h1><p>foo <strong>bar</strong> baz <em>qux</em></p>
+<!DOCTYPE html><html><head><title>Markdown</title></head><body><h1>Text with <strong><em>decoration</em></strong></h1><p>foo <em>bar</em> <strong>baz</strong> <strong><em>qux</em></strong></p>
 <p><strong>foo</strong> <em>bar</em> baz</p>
 <p>bar <strong>bar</strong> <em>baz</em> qux</p>
 </body></html>
