--- a/examples/main.html
+++ b/examples/main.html
@@ -1,6 +1,3 @@
-<!DOCTYPE html><html><head><title>Markdown</title></head><body><h1>Bands</h1>
-<h2>The Who</h2>
-<p>Who are you?</p>
-<h2>Foo Fighters</h2>
-<p>Learning to walk again</p>
+<!DOCTYPE html><html><head><title>Markdown</title></head><body><h1>Bands</h1><h1>The Who</h1><p>Who are you? <strong>bold</strong> whooo!.</p>
+<h1>Foo Fighters</h1><p>Learning to walk again</p>
 </body></html>
