feat: added support and style for blockquotes

--- a/examples/main.html
+++ b/examples/main.html
@@ -1,3 +1,11 @@
-<!DOCTYPE html><html><head><title>Markdown</title></head><body><h1>Bands</h1><h1>The Who</h1><p>Who are you? <strong>bold</strong> whooo!.</p>
-<h1>Foo Fighters</h1><p>Learning to walk again</p>
-</body></html>
+<!DOCTYPE html>
+        <style>
+            blockquote {
+                margin: 1.5em 40px;
+                padding: 0 1em;
+                border-left: 5px solid #ddd;
+                background-color: #f9f9f9;
+                padding: 0.5em 10px;
+              }
+        </style>
+        <html><head><title>Markdown</title></head><body><h1>Bands</h1><h1>The Who</h1><p>Who are you? <strong>bold</strong> who!.</p><h1>Foo Fighters</h1><p>Learning to walk again</p><blockquote><p>A million miles away Your signal in the distance To whom it may concern I think I lost my way Getting good at starting over Every time that I return Learning to walk again I believe I've waited long enough Where do I begin? Learning to talk again Can't you see I've waited long enough? Where do I begin?</p></blockquote><hr/><hr/><hr/><hr/></body></html>
