--- a/examples/main.html
+++ b/examples/main.html
@@ -8,4 +8,6 @@
                 padding: 0.5em 10px;
               }
         </style>
-        <html><head><title>Markdown</title></head><body><h1>Bands</h1><hr/><h2>The Who</h2><p>Who are you? <strong>bold</strong> who!.</p><h2>Foo Fighters</h2><p>Learning to walk again</p><blockquote><p>A million miles away Your signal in the distance To whom it may concern I think I lost my way Getting good at starting over Every time that I return Learning to walk again I believe I've waited long enough Where do I begin? Learning to talk again Can't you see I've waited long enough? Where do I begin?</p></blockquote><hr/><hr/><hr/><hr/><h1>Artists</h1></body></html>
+        <html><head><title>Markdown</title></head><body><h1>Common mark spec</h1><h2>Leaf blocks</h2><h3>Headings</h3><h4>ATX headings</h4><h1>Heading 1</h1><h2>Heading 2</h2><h3>Heading 3</h3><h4>Heading 4</h4><h5>Heading 5</h5><h6>Heading 6</h6><h4>Setext headings</h4><h1>Heading 1</h1><h2>Heading 2</h2><h3>Indented code blocks</h3><pre><code>if (indented) {
+   code();
+}</code></pre><h1>Naive support</h1><h1>Bands</h1><hr/><h2>The Who</h2><p>Who are you? <strong>bold</strong> who!.</p><h2>Foo Fighters</h2><p>Learning to walk again</p><blockquote><p>A million miles away Your signal in the distance To whom it may concern I think I lost my way Getting good at starting over Every time that I return Learning to walk again I believe I've waited long enough Where do I begin? Learning to talk again Can't you see I've waited long enough? Where do I begin?</p></blockquote><hr/><hr/><hr/><hr/><h1>Artists</h1></body></html>
