feat: add support for paragraphs

--- a/examples/main.html
+++ b/examples/main.html
@@ -12,4 +12,12 @@
    code();
 }</code></pre><h3>Fenced code blocks</h3><pre><code>function foo(x) {
   return 3
-}</code></pre><pre><code></code></pre><h3>Blank lines</h3><h6>1</h6><h6>6</h6><h1>Naive support</h1><h1>Bands</h1><hr/><h2>The Who</h2><p>Who are you? <strong>bold</strong> who!.</p><h2>Foo Fighters</h2><p>Learning to walk again</p><blockquote><p>A million miles away Your signal in the distance To whom it may concern I think I lost my way Getting good at starting over Every time that I return Learning to walk again I believe I've waited long enough Where do I begin? Learning to talk again Can't you see I've waited long enough? Where do I begin?</p></blockquote><hr/><hr/><hr/><hr/><h1>Artists</h1></body></html>
+}</code></pre><pre><code></code></pre><h3>Paragraphs</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et
+dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+mollit anim id est laborum.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et
+dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+mollit anim id est laborum.</p><h3>Blank lines</h3><h6>1</h6><h6>6</h6></body></html>
