--- a/examples/main.html
+++ b/examples/main.html
@@ -20,4 +20,4 @@ mollit anim id est laborum.</p><p>Lorem ipsum dolor sit amet, consectetur adipis
 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
 ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
 fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-mollit anim id est laborum.</p><h3>Blank lines</h3><h6>1</h6><h6>6</h6></body></html>
+mollit anim id est laborum.</p><h3>Blank lines</h3><h6>1</h6><h6>6</h6><h1>Naive support</h1><h1>Bands</h1><hr/><h2>The Who</h2><p>Who are you? <strong>bold</strong> who!.</p><h2>Foo Fighters</h2><p>Learning to walk again</p><hr/><hr/><hr/><hr/><h1>Artists</h1></body></html>
