--- a/examples/main.html
+++ b/examples/main.html
@@ -1,14 +1,75 @@
-<!DOCTYPE html>
-        <style>
-            blockquote {
-                margin: 1.5em 40px;
-                padding: 0 1em;
-                border-left: 5px solid #ddd;
-                background-color: #f9f9f9;
-                padding: 0.5em 10px;
-              }
-        </style>
-        <html><head><title>Markdown</title></head><body><h1>Common mark spec</h1><h2>Leaf blocks</h2><h3>Headings</h3><h4>ATX headings</h4><h1>Heading 1</h1><h2>Heading 2</h2><h3>Heading 3</h3><h4>Heading 4</h4><h5>Heading 5</h5><h6>Heading 6</h6><h4>Setext headings</h4><h1>Heading 1</h1><h2>Heading 2</h2><h3>Indented code blocks</h3><pre><code>if (indented) {
+<!DOCTYPE html><style>/* Define color variables */
+:root {
+    --primary-color: #e0e0e0; /* Dark */
+    --light-primary-color: #e0e0e040; /* Light dark */
+    --light-light-primary-color: #e0e0e010; /* Light light dark */
+    --secondary-color: #212127; /* Light */
+  }
+
+
+body {
+    font-family: "Helvetica", sans-serif;
+    font-size: 1.2rem;
+    font-weight: 100;
+    color: var(--primary-color);
+    background-color: var(--secondary-color);
+    padding: 1rem 2rem;
+}
+
+h1 {
+    border-bottom: 1px solid var(--light-primary-color);
+    padding-bottom: 0.5rem;
+    margin: 3.5rem 0;
+}
+
+h2 {
+    border-bottom: 1px solid var(--light-primary-color);
+    padding-bottom: 0.5rem;
+    margin: 3rem 0;
+}
+
+h3 {
+    margin: 2.5rem 0;
+}
+
+h4 {
+    margin: 2rem 0;
+}
+
+h5 {
+    margin: 2rem 0;
+}
+
+h6 {
+    margin: 1.5rem 0;
+}
+
+pre code {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 1rem;
+    min-height: 4rem;
+    display: block;
+    padding: 1rem;
+    border-radius: 5px;
+    color: var(--primary-color);
+    background-color: var(--light-light-primary-color);
+
+}
+
+blockquote {
+    margin: 1.5em 0px;
+    padding: 0 1em;
+    border-left: 5px solid var(--light-primary-color);
+    background-color: var(--light-light-primary-color);
+    padding: 0.5em 10px;
+}
+
+hr {
+    border-top: 1px solid var(--light-primary-color);
+    border-bottom: 0px solid var(--light-primary-color);
+    border-left: 0px solid var(--light-primary-color);
+    border-right: 0px solid var(--light-primary-color);
+}</style><html><head><title>Markdown</title></head><body><h1>Common mark spec</h1><h2>Leaf blocks</h2><h3>Headings</h3><h4>ATX headings</h4><h1>Heading 1</h1><h2>Heading 2</h2><h3>Heading 3</h3><h4>Heading 4</h4><h5>Heading 5</h5><h6>Heading 6</h6><h4>Setext headings</h4><h1>Heading 1</h1><h2>Heading 2</h2><h3>Indented code blocks</h3><pre><code>if (indented) {
    code();
 }</code></pre><h3>Fenced code blocks</h3><pre><code>function foo(x) {
   return 3
