feat: add code spans support

--- a/examples/main.html
+++ b/examples/main.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html><style>/* Define color variables */
 :root {
-    --primary-color: #e0e0e0; /* Dark */
-    --light-primary-color: #e0e0e040; /* Light dark */
-    --light-light-primary-color: #e0e0e010; /* Light light dark */
-    --secondary-color: #212127; /* Light */
+    --primary-color: #343434; /* Dark */
+    --light-primary-color: #34343430; /* Light dark */
+    --light-light-primary-color: #34343410; /* Light light dark */
+    --secondary-color: #f3f3f3; /* Light */
   }
 
 
@@ -81,4 +81,4 @@ mollit anim id est laborum.</p><p>Lorem ipsum dolor sit amet, consectetur adipis
 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
 ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
 fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-mollit anim id est laborum.</p><h3>Blank lines</h3><h6>1</h6><h6>6</h6><h1>Naive support</h1><h1>Bands</h1><hr/><h2>The Who</h2><p>Who are you? <strong>bold</strong> who!.</p><h2>Foo Fighters</h2><p>Learning to walk again</p><hr/><hr/><hr/><hr/><h1>Artists</h1></body></html>
+mollit anim id est laborum.</p><h3>Blank lines</h3><h3>Code Spans</h3><p><code>print("Hello ` World")</code></p><h6>1</h6><h6>6</h6><h1>Naive support</h1><h1>Bands</h1><hr/><h2>The Who</h2><p>Who are you? <strong>bold</strong> who!.</p><h2>Foo Fighters</h2><p>Learning to walk again</p><hr/><hr/><hr/><hr/><h1>Artists</h1></body></html>
