--- a/examples/main.html
+++ b/examples/main.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html><style>/* Define color variables */
 :root {
-    --primary-color: #343434; /* Dark */
-    --soft-primary-color: #34343499; /* Light dark */
-    --light-primary-color: #34343430; /* Light dark */
-    --light-light-primary-color: #34343410; /* Light light dark */
-    --secondary-color: #f3f3f3; /* Light */
+    --primary-color: #e0e0e0; /* Dark */
+    --light-primary-color: #e0e0e040; /* Light dark */
+    --light-light-primary-color: #e0e0e010; /* Light light dark */
+    --secondary-color: #212127; /* Light */
     --reference-color: #5a9de5; /* Sky blue */
-    --highlight-color: #f1e8b2; /* Highlight */
+    --highlight-color: #e8a9e1b2; /* Highlight */
   }
 
 
-body {
+  body {
     font-family: "Helvetica", sans-serif;
     font-size: 1.2rem;
     font-weight: 100;
@@ -118,19 +117,19 @@ tr:last-child {
 }
 
 mark {
-    color: var(--primary-color);
+    color: var(--secondary-color);
     background-color: var(--highlight-color);
     padding: 0.2rem 0.5rem;
-}</style><html><head><title>Markdown</title></head><body><h1 >Common mark spec</h1><h2 >Leaf blocks</h2><h3 >Headings</h3><h4 >ATX headings</h4><h1 >Heading 1</h1><h2 >Heading 2</h2><h3 >Heading 3</h3><h4 >Heading 4</h4><h5 >Heading 5</h5><h6 >Heading 6</h6><h4 >Setext headings</h4><h1 >Heading 1</h1><h2 >Heading 2</h2><h3 >Indented code blocks</h3><pre ><code >if (indented) {
+}</style><html><head><title>Markdown</title></head><body><h1>Common mark spec</h1><h2>Leaf blocks</h2><h3>Headings</h3><h4>ATX headings</h4><h1>Heading 1</h1><h2>Heading 2</h2><h3>Heading 3</h3><h4>Heading 4</h4><h5>Heading 5</h5><h6>Heading 6</h6><h4>Setext headings</h4><h1>Heading 1</h1><h2>Heading 2</h2><h3>Indented code blocks</h3><pre><code>if (indented) {
    code();
-}</code></pre><h3 >Fenced code blocks</h3><pre ><code >function foo(x) {
+}</code></pre><h3>Fenced code blocks</h3><pre><code>function foo(x) {
   return 3
-}</code></pre><pre ><code ></code></pre><h3 >Paragraphs</h3><p >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et
+}</code></pre><pre><code></code></pre><h3>Paragraphs</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et
 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
 ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
 fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-mollit anim id est laborum.</p><p >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et
+mollit anim id est laborum.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et
 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
 ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
 fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-mollit anim id est laborum.</p><h3 >Blank lines</h3><h3 >Code Spans</h3><p ><code >print("Hello ` World")</code></p><h3 >Links</h3><p ><a href="https://github.com/IIC3585-2024/functional-js-group-04" title="Repositorio">Repositorio grupo 04</a></p><h6 >1</h6><h6 >6</h6><h1 >Naive support</h1><h2 >Decoration</h2><h3 >Bold</h3><p >Some <strong >bold</strong> text</p><h3 >Italic</h3><p >Some <em >italic</em> text</p><h3 >Combination of inlines</h3><p >Some <strong >*bold and italic</strong>* text</p><h1 >Bands</h1><hr ></hr><h2 >The Who</h2><p >Who are you? <strong >bold</strong> who!.</p><h2 >Foo Fighters</h2><p >Learning to walk again</p><hr ></hr><hr ></hr><hr ></hr><hr ></hr><h1 >Artists</h1></body></html>
+mollit anim id est laborum.</p><h3>Blank lines</h3><h3>Code Spans</h3><p><code>print("Hello ` World")</code></p><h3>Links</h3><p><ahref="https://github.com/IIC3585-2024/functional-js-group-04" title="Repositorio">Repositorio grupo 04</a></p><h6>1</h6><h6>6</h6><h1>Naive support</h1><h2>Decoration</h2><h3>Bold</h3><p>Some <strong>bold</strong> text</p><h3>Italic</h3><p>Some <em>italic</em> text</p><h3>Combination of inlines</h3><p>Some <strong><em>bold and italic</em></strong> <strong>bold</strong> <em>italic</em> text</p><h1>Bands</h1><hr></hr><h2>The Who</h2><p>Who are you? <strong>bold</strong> who!.</p><h2>Foo Fighters</h2><p>Learning to walk again</p><hr></hr><hr></hr><hr></hr><hr></hr><h1>Artists</h1></body></html>
